Generate new openapi.yaml and add new route (ton) to generate new ton wallet
